--- a/index.html
+++ b/index.html
@@ -1,78 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Extinct Animals</title>
 
-	<title>IS219 Gallery (Project 3)</title>
-
-	<!-- Our CSS File along with Boostrap, and Bootstrap Icon Styles-->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-	<link rel="stylesheet" type='text/css' href="style.css"/>
-<script src="https://unpkg.com/vue@3.0.2"></script>
-<script src="https://unpkg.com/vue-router@4"></script>
-
-	  
-	<!-- DO NOT CHANGE ANYTHING ABOVE THIS LINE-->
-
-	<!-- Javascript Framework (e.g., vue.js) (ADD HERE) -->
-
-
-
+	<link rel="stylesheet" href="css/style.css"/>
+	<script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+	<script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+	<script src='js/gallery.js' type="text/javascript"></script>
 </head>
+<body>
+  <div id="photoBooth">
+    <p class="banner">Extinct Animals</p>
+    <div id="slideShow">
+      <div class="photoHolder">
+        <img class="thumbnail" id="photo" src="img/extinct_EN.png" alt="Gallery Image"/>
+        <img class="moreIndicator rot90" src="img/more.png" alt="More Content"/>
+      </div>
+      
+      <div id="nav">
+        <img id="prevPhoto" class='rot180' src="img/arrow.png" alt="Previous Photo"/>
+        <img id="nextPhoto" src="img/arrow.png" alt="Next Photo
+        "/>
+      </div>
+      <div class="details">
+        <p class="location">Location: </p>
+        <p class="description">Description: </p>
+        <p class="date">Date: </p>
+      </div>
 
-  <body>
-	
-
-	<div id="vue_app" class="container">
-
-	    <div class="header">
-
-	      <div class="container">
-	        <h1 id="app_title">{{ appTitle }} </h1>
-	      </div>
-
-	    </div>
-
-	    <div class="main">
-
-	      <div class="row">
-
-	        <div class="col-md-6" v-for="(movie, i) in movies">
-	            <div class="thumbnail">
-<!-- {{calls movies[0] which pulls the json text}} -->
-						<img class="poster img-fluid" @click="posterClick(movie)" :src="movie.posters[movie.posterindex]"/>
-						<div class="imageInfo">{{ movies[i].posterindex }}</div>
-
-						<p class="title">{{ movies[i].title}} </p>
-						<p class="score"><i class="bi bi-star" aria-hidden="true"></i> {{ movies[i].iscore }} </p>
-						<p class="runtime">runtime: {{timeText(movies[i].runtime)}}</p>
-						<p class="released">Released: {{getMonthText (movies[i].released)}}</p>
-						<p class="websites">Websites: <a :href="movies[i].imdb">imdb</a> | <a :href="movies[i].website">website</a></p>
-
-			            <div class="social">
-			              <p class="likes" @click="movies[i].likes++"><i class="bi bi-hand-thumbs-up" aria-hidden="true"></i> {{ movies[i].likes }}</p>
-			              <p class="dislikes"  @click="movies[i].dislikes++"><i class="bi bi-hand-thumbs-down"></i>{{ movies[i].dislikes }}</p>
-			            </div>
-	            </div>
-	        </div>
-
-	      </div>
-	    </div>
-
-	    <div class="footer">
-	      <div class="container">
-			<a id="github" class="btn btn-lg btn-warning":href='github'>
-				<i class="bi bi-github me-2"></i>{{ owner }}
-	  		</a>
-	      </div>
-	    </div>
-	</div>
-
-  	<!-- This load the Vue.js code -->
-	<script type="text/javascript" src="site.js"></script>
-
-
+    </div>
+  </div>
 </body>
 </html>
